Upgrade Windows code to JDK 20