@@ -8,7 +8,7 @@
 package net.codecrete.usb.windows;
 
 import net.codecrete.usb.USBDevice;
-import net.codecrete.usb.common.ForeignMemory;
+import net.codecrete.usb.common.ScopeCleanup;
 import net.codecrete.usb.common.USBDeviceImpl;
 import net.codecrete.usb.common.USBDeviceRegistry;
 import net.codecrete.usb.usbstandard.ConfigurationDescriptor;
@@ -24,7 +24,10 @@ import net.codecrete.usb.windows.gen.setupapi.SetupAPI;
 import net.codecrete.usb.windows.gen.usbioctl.USBIoctl;
 import net.codecrete.usb.windows.gen.user32.*;
 
-import java.lang.foreign.*;
+import java.lang.foreign.Arena;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.util.ArrayList;
@@ -33,7 +36,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
 
-import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.NULL;
 import static java.lang.foreign.ValueLayout.*;
 import static net.codecrete.usb.usbstandard.Constants.*;
 import static net.codecrete.usb.windows.WindowsUSBException.throwException;
@@ -51,28 +54,28 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
 
     @Override
     protected void monitorDevices() {
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
 
-            Addressable hwnd;
+            MemorySegment hwnd;
 
             try {
-                final var className = Win.createSegmentFromString("USB_MONITOR", session);
-                final var windowName = Win.createSegmentFromString("USB device monitor", session);
+                final var className = Win.createSegmentFromString("USB_MONITOR", arena);
+                final var windowName = Win.createSegmentFromString("USB device monitor", arena);
                 final var instance = Kernel32.GetModuleHandleW(NULL);
 
                 // create upcall for handling window messages
                 var handleWindowMessageMH = MethodHandles.lookup().findVirtual(WindowsUSBDeviceRegistry.class,
-                        "handleWindowMessage", MethodType.methodType(long.class, MemoryAddress.class, int.class,
+                        "handleWindowMessage", MethodType.methodType(long.class, MemorySegment.class, int.class,
                                 long.class, long.class)).bindTo(this);
                 var handleWindowMessageStub = Linker.nativeLinker().upcallStub(handleWindowMessageMH,
-                        FunctionDescriptor.of(JAVA_LONG, ADDRESS, JAVA_INT, JAVA_LONG, JAVA_LONG), session);
+                        FunctionDescriptor.of(JAVA_LONG, ADDRESS, JAVA_INT, JAVA_LONG, JAVA_LONG), arena.scope());
 
                 // register window class
-                var wx = session.allocate(WNDCLASSEXW.$LAYOUT());
+                var wx = arena.allocate(WNDCLASSEXW.$LAYOUT());
                 WNDCLASSEXW.cbSize$set(wx, (int) wx.byteSize());
-                WNDCLASSEXW.lpfnWndProc$set(wx, handleWindowMessageStub.address());
+                WNDCLASSEXW.lpfnWndProc$set(wx, handleWindowMessageStub);
                 WNDCLASSEXW.hInstance$set(wx, instance);
-                WNDCLASSEXW.lpszClassName$set(wx, className.address());
+                WNDCLASSEXW.lpszClassName$set(wx, className);
                 User32.RegisterClassExW(wx);
 
                 // create message-only window
@@ -82,7 +85,7 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
                     throwLastError("internal error (CreateWindowExW)");
 
                 // configure notifications
-                var notificationFilter = session.allocate(DEV_BROADCAST_DEVICEINTERFACE_W.$LAYOUT());
+                var notificationFilter = arena.allocate(DEV_BROADCAST_DEVICEINTERFACE_W.$LAYOUT());
                 DEV_BROADCAST_DEVICEINTERFACE_W.dbcc_size$set(notificationFilter, (int) notificationFilter.byteSize());
                 DEV_BROADCAST_DEVICEINTERFACE_W.dbcc_devicetype$set(notificationFilter,
                         User32.DBT_DEVTYP_DEVICEINTERFACE());
@@ -102,7 +105,7 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
             }
 
             // process messages
-            var msg = session.allocate(MSG.$LAYOUT());
+            var msg = arena.allocate(MSG.$LAYOUT());
             //noinspection StatementWithEmptyBody
             while (User32.GetMessageW(msg, hwnd, 0, 0) > 0)
                 ; // do nothing
@@ -112,7 +115,7 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
     private void enumeratePresentDevices() {
 
         List<USBDevice> deviceList = new ArrayList<>();
-        try (var outerSession = MemorySession.openConfined()) {
+        try (var outerArena = Arena.openConfined(); var outerCleanup = new ScopeCleanup()) {
 
             // get device information set of all USB devices present
             final var devInfoSetHandle = SetupAPI.SetupDiGetClassDevsW(USBHelper.GUID_DEVINTERFACE_USB_DEVICE, NULL,
@@ -121,14 +124,14 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
                 throwException("internal error (SetupDiGetClassDevsW)");
 
             // ensure the result is destroyed when the scope is left
-            outerSession.addCloseAction(() -> SetupAPI.SetupDiDestroyDeviceInfoList(devInfoSetHandle));
+            outerCleanup.add(() -> SetupAPI.SetupDiDestroyDeviceInfoList(devInfoSetHandle));
 
-            var devInfo = MemorySegment.allocateNative(SP_DEVINFO_DATA.$LAYOUT(), outerSession);
+            var devInfo = outerArena.allocate(SP_DEVINFO_DATA.$LAYOUT());
             SP_DEVINFO_DATA.cbSize$set(devInfo, (int) SP_DEVINFO_DATA.$LAYOUT().byteSize());
 
             // ensure all hubs are closed later
-            final var hubHandles = new HashMap<String, MemoryAddress>();
-            outerSession.addCloseAction(() -> hubHandles.forEach((path, handle) -> Kernel32.CloseHandle(handle)));
+            final var hubHandles = new HashMap<String, MemorySegment>();
+            outerCleanup.add(() -> hubHandles.forEach((path, handle) -> Kernel32.CloseHandle(handle)));
 
             // iterate all devices
             for (int i = 0; true; i++) {
@@ -171,17 +174,17 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
 
         // iterate all children
         for (var instanceId : childrenIds) {
-            try (var session = MemorySession.openConfined()) {
+            try (var arena = Arena.openConfined(); var cleanup = new ScopeCleanup()) {
                 // create device info set
                 var devInfoSetHandle = SetupAPI.SetupDiCreateDeviceInfoList(NULL, NULL);
                 if (Win.IsInvalidHandle(devInfoSetHandle))
                     throwLastError("Cannot create device info list");
-                session.addCloseAction(() -> SetupAPI.SetupDiDestroyDeviceInfoList(devInfoSetHandle));
+                cleanup.add(() -> SetupAPI.SetupDiDestroyDeviceInfoList(devInfoSetHandle));
 
                 // get device info for child
-                var devInfo = session.allocate(SP_DEVINFO_DATA.$LAYOUT());
+                var devInfo = arena.allocate(SP_DEVINFO_DATA.$LAYOUT());
                 SP_DEVINFO_DATA.cbSize$set(devInfo, (int) devInfo.byteSize());
-                var instanceIdSegment = Win.createSegmentFromString(instanceId, session);
+                var instanceIdSegment = Win.createSegmentFromString(instanceId, arena);
                 if (SetupAPI.SetupDiOpenDeviceInfoW(devInfoSetHandle, instanceIdSegment, NULL, 0, devInfo) == 0)
                     throwLastError("Internal error (SetupDiOpenDeviceInfoW)");
 
@@ -192,12 +195,12 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
                 if (interfaceNumber == -1)
                     continue;
 
-                var guids = DeviceProperty.findDeviceInterfaceGUIDs(devInfoSetHandle, devInfo, session);
+                var guids = DeviceProperty.findDeviceInterfaceGUIDs(devInfoSetHandle, devInfo, arena);
 
                 for (var guid : guids) {
                     // check for Class GUID
-                    var guidSegment = Win.createSegmentFromString(guid, session);
-                    var clsid = session.allocate(GUID.$LAYOUT());
+                    var guidSegment = Win.createSegmentFromString(guid, arena);
+                    var clsid = arena.allocate(GUID.$LAYOUT());
                     if (Ole32.CLSIDFromString(guidSegment, clsid) != 0)
                         continue;
 
@@ -215,9 +218,9 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
         return children;
     }
 
-    private USBDevice createDeviceFromDeviceInfo(MemoryAddress devInfoSetHandle, MemorySegment devInfo,
-                                                 String devicePath, HashMap<String, MemoryAddress> hubHandles) {
-        try (var session = MemorySession.openConfined()) {
+    private USBDevice createDeviceFromDeviceInfo(MemorySegment devInfoSetHandle, MemorySegment devInfo,
+                                                 String devicePath, HashMap<String, MemorySegment> hubHandles) {
+        try (var arena = Arena.openConfined()) {
 
             var usbPortNum = DeviceProperty.getDeviceIntProperty(devInfoSetHandle, devInfo,
                     DeviceProperty.DEVPKEY_Device_Address);
@@ -228,7 +231,7 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
             // open hub if not open yet
             var hubHandle = hubHandles.get(hubPath);
             if (hubHandle == null) {
-                var hubPathSeg = Win.createSegmentFromString(hubPath, session);
+                var hubPathSeg = Win.createSegmentFromString(hubPath, arena);
                 hubHandle = Kernel32.CreateFileW(hubPathSeg, Kernel32.GENERIC_WRITE(), Kernel32.FILE_SHARE_WRITE(),
                         NULL, Kernel32.OPEN_EXISTING(), 0, NULL);
                 if (Win.IsInvalidHandle(hubHandle))
@@ -259,14 +262,14 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
      * @param usbPortNum the USB port number
      * @return the {@code USBDevice} instance
      */
-    private USBDevice createDevice(String devicePath, Map<Integer, String> children, MemoryAddress hubHandle, int usbPortNum) {
+    private USBDevice createDevice(String devicePath, Map<Integer, String> children, MemorySegment hubHandle, int usbPortNum) {
 
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
 
             // get device descriptor
-            var connInfo = session.allocate(USBHelper.USB_NODE_CONNECTION_INFORMATION_EX$Struct);
+            var connInfo = arena.allocate(USBHelper.USB_NODE_CONNECTION_INFORMATION_EX$Struct);
             USBHelper.USB_NODE_CONNECTION_INFORMATION_EX_ConnectionIndex.set(connInfo, usbPortNum);
-            var sizeHolder = session.allocate(JAVA_INT);
+            var sizeHolder = arena.allocate(JAVA_INT);
             if (Kernel32.DeviceIoControl(hubHandle, USBIoctl.IOCTL_USB_GET_NODE_CONNECTION_INFORMATION_EX(), connInfo
                     , (int) connInfo.byteSize(), connInfo, (int) connInfo.byteSize(), sizeHolder, NULL) == 0)
                 throwLastError("Internal error (cannot get device descriptor)");
@@ -277,8 +280,7 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
             int vendorId = deviceDescriptor.vendorID();
             int productId = deviceDescriptor.productID();
 
-            var configDesc = getDescriptor(hubHandle, usbPortNum, CONFIGURATION_DESCRIPTOR_TYPE, 0,
-                    (short) 0, session);
+            var configDesc = getDescriptor(hubHandle, usbPortNum, CONFIGURATION_DESCRIPTOR_TYPE, 0, (short) 0, arena);
 
             var device = new WindowsUSBDevice(devicePath, children, vendorId, productId, configDesc);
             device.setFromDeviceDescriptor(descriptorSegment);
@@ -288,19 +290,19 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
         }
     }
 
-    private MemorySegment getDescriptor(Addressable hubHandle, int usbPortNumber, int descriptorType, int index,
-                                        short languageID, MemorySession session) {
-        return getDescriptor(hubHandle, usbPortNumber, descriptorType, index, languageID, 0, session);
+    private MemorySegment getDescriptor(MemorySegment hubHandle, int usbPortNumber, int descriptorType, int index,
+                                        short languageID, Arena arena) {
+        return getDescriptor(hubHandle, usbPortNumber, descriptorType, index, languageID, 0, arena);
 
     }
 
-    private MemorySegment getDescriptor(Addressable hubHandle, int usbPortNumber, int descriptorType, int index,
-                                        short languageID, int requestSize, MemorySession session) {
+    private MemorySegment getDescriptor(MemorySegment hubHandle, int usbPortNumber, int descriptorType, int index,
+                                        short languageID, int requestSize, Arena arena) {
 
         int size = requestSize != 0 ? requestSize + (int) USBHelper.USB_DESCRIPTOR_REQUEST_Data$Offset : 256;
 
         // create descriptor requests
-        var descriptorRequest = session.allocate(size);
+        var descriptorRequest = arena.allocate(size);
         USBHelper.USB_DESCRIPTOR_REQUEST_ConnectionIndex.set(descriptorRequest, usbPortNumber);
         var setupPacket = new SetupPacket(descriptorRequest.asSlice(USBHelper.USB_DESCRIPTOR_REQUEST_SetupPacket$Offset,
                 SetupPacket.LAYOUT.byteSize()));
@@ -311,7 +313,7 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
         setupPacket.setLength(size - (int)USBHelper.USB_DESCRIPTOR_REQUEST_Data$Offset);
 
         // execute request
-        var effectiveSizeHolder = session.allocate(JAVA_INT);
+        var effectiveSizeHolder = arena.allocate(JAVA_INT);
         if (Kernel32.DeviceIoControl(hubHandle, USBIoctl.IOCTL_USB_GET_DESCRIPTOR_FROM_NODE_CONNECTION(),
                 descriptorRequest, size, descriptorRequest, size, effectiveSizeHolder, NULL) == 0)
             throwLastError("Cannot retrieve descriptor %d", index);
@@ -333,43 +335,39 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
                 throwException("Unexpected descriptor size");
 
             // repeat with correct size
-            return getDescriptor(hubHandle, usbPortNumber, descriptorType, index, languageID, expectedSize, session);
+            return getDescriptor(hubHandle, usbPortNumber, descriptorType, index, languageID, expectedSize, arena);
         }
 
         return descriptorRequest.asSlice(USBHelper.USB_DESCRIPTOR_REQUEST_Data$Offset, effectiveSize);
     }
 
-    private String getStringDescriptor(Addressable hubHandle, int usbPortNumber, int index) {
+    private String getStringDescriptor(MemorySegment hubHandle, int usbPortNumber, int index) {
         if (index == 0)
             return null;
 
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             var stringDesc = new StringDescriptor(getDescriptor(hubHandle, usbPortNumber, STRING_DESCRIPTOR_TYPE, index,
-                    DEFAULT_LANGUAGE, session));
+                    DEFAULT_LANGUAGE, arena));
             return stringDesc.string();
         }
     }
 
-    private long handleWindowMessage(MemoryAddress hWnd, int uMsg, long wParam, long lParam) {
+    private long handleWindowMessage(MemorySegment hWnd, int uMsg, long wParam, long lParam) {
 
         // check for message related to connecting/disconnecting devices
         if (uMsg == User32.WM_DEVICECHANGE() && (wParam == User32.DBT_DEVICEARRIVAL() || wParam == User32.DBT_DEVICEREMOVECOMPLETE())) {
-            try (var session = MemorySession.openConfined()) {
-                var data = MemorySegment.ofAddress(MemoryAddress.ofLong(lParam),
-                        DEV_BROADCAST_DEVICEINTERFACE_W.sizeof(), session);
-                if (DEV_BROADCAST_HDR.dbch_devicetype$get(data) == User32.DBT_DEVTYP_DEVICEINTERFACE()) {
+            var data = MemorySegment.ofAddress(lParam, DEV_BROADCAST_DEVICEINTERFACE_W.sizeof());
+            if (DEV_BROADCAST_HDR.dbch_devicetype$get(data) == User32.DBT_DEVTYP_DEVICEINTERFACE()) {
 
-                    // get device path
-                    var nameSlice =
-                            MemorySegment.ofAddress(DEV_BROADCAST_DEVICEINTERFACE_W.dbcc_name$slice(data).address(),
-                                    500, session);
-                    var devicePath = Win.createStringFromSegment(nameSlice);
-                    if (wParam == User32.DBT_DEVICEARRIVAL())
-                        onDeviceConnected(devicePath);
-                    else
-                        onDeviceDisconnected(devicePath);
-                    return 0;
-                }
+                // get device path
+                var nameSlice = MemorySegment.ofAddress(
+                        DEV_BROADCAST_DEVICEINTERFACE_W.dbcc_name$slice(data).address(), 500);
+                var devicePath = Win.createStringFromSegment(nameSlice);
+                if (wParam == User32.DBT_DEVICEARRIVAL())
+                    onDeviceConnected(devicePath);
+                else
+                    onDeviceDisconnected(devicePath);
+                return 0;
             }
         }
 
@@ -378,7 +376,7 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
     }
 
     private void onDeviceConnected(String devicePath) {
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined(); var cleanup = new ScopeCleanup()) {
 
             // get device information set of all USB devices present
             final var devInfoSetHandle = SetupAPI.SetupDiGetClassDevsW(USBHelper.GUID_DEVINTERFACE_USB_DEVICE, NULL,
@@ -387,17 +385,17 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
                 throwLastError("internal error (SetupDiGetClassDevsW)");
 
             // ensure the result is destroyed when the scope is left
-            session.addCloseAction(() -> SetupAPI.SetupDiDestroyDeviceInfoList(devInfoSetHandle));
+            cleanup.add(() -> SetupAPI.SetupDiDestroyDeviceInfoList(devInfoSetHandle));
 
-            var devIntfData = session.allocate(SP_DEVICE_INTERFACE_DATA.$LAYOUT());
+            var devIntfData = arena.allocate(SP_DEVICE_INTERFACE_DATA.$LAYOUT());
             SP_DEVICE_INTERFACE_DATA.cbSize$set(devIntfData, (int) devIntfData.byteSize());
-            var devicePathSegment = Win.createSegmentFromString(devicePath, session);
+            var devicePathSegment = Win.createSegmentFromString(devicePath, arena);
             if (SetupAPI.SetupDiOpenDeviceInterfaceW(devInfoSetHandle, devicePathSegment, 0, devIntfData) == 0)
                 throwLastError("internal error (SetupDiOpenDeviceInterfaceW)");
 
-            ForeignMemory.addCloseAction(devIntfData, (segment) -> SetupAPI.SetupDiDeleteDeviceInterfaceData(devInfoSetHandle, segment));
+            cleanup.add(() -> SetupAPI.SetupDiDeleteDeviceInterfaceData(devInfoSetHandle, devIntfData));
 
-            var devInfo = session.allocate(SP_DEVINFO_DATA.$LAYOUT());
+            var devInfo = arena.allocate(SP_DEVINFO_DATA.$LAYOUT());
             SP_DEVINFO_DATA.cbSize$set(devInfo, (int) devInfo.byteSize());
             if (SetupAPI.SetupDiGetDeviceInterfaceDetailW(devInfoSetHandle, devIntfData, NULL, 0, NULL, devInfo) == 0) {
                 int err = Kernel32.GetLastError();
@@ -406,8 +404,8 @@ public class WindowsUSBDeviceRegistry extends USBDeviceRegistry {
             }
 
             // ensure all hubs are closed later
-            final var hubHandles = new HashMap<String, MemoryAddress>();
-            session.addCloseAction(() -> hubHandles.forEach((path, handle) -> Kernel32.CloseHandle(handle)));
+            final var hubHandles = new HashMap<String, MemorySegment>();
+            cleanup.add(() -> hubHandles.forEach((path, handle) -> Kernel32.CloseHandle(handle)));
 
             try {
                 // create device instance
