@@ -10,10 +10,9 @@ import net.codecrete.usb.USBException;
 import net.codecrete.usb.USBStallException;
 import net.codecrete.usb.windows.gen.kernel32.Kernel32;
 
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 
-import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.NULL;
 import static java.lang.foreign.ValueLayout.ADDRESS;
 
 /**
@@ -73,13 +72,13 @@ public class WindowsUSBException extends USBException {
     }
 
     private static String getErrorMessage(int errorCode) {
-        try (var session = MemorySession.openConfined()) {
-            var messagePointerHolder = session.allocate(ADDRESS);
+        try (var arena = Arena.openConfined()) {
+            var messagePointerHolder = arena.allocate(ADDRESS);
             Kernel32.FormatMessageW(Kernel32.FORMAT_MESSAGE_ALLOCATE_BUFFER()
                             | Kernel32.FORMAT_MESSAGE_FROM_SYSTEM() | Kernel32.FORMAT_MESSAGE_IGNORE_INSERTS(),
                     NULL, errorCode, 0, messagePointerHolder, 0, NULL);
             var messagePointer = messagePointerHolder.get(ADDRESS, 0);
-            String message = Win.createStringFromSegment(MemorySegment.ofAddress(messagePointer, 4000, session));
+            String message = Win.createStringFromSegment(messagePointer);
             Kernel32.LocalFree(messagePointer);
             return message.trim();
         }
